fix: achieve-area spacing

--- a/css/style.css
+++ b/css/style.css
@@ -13929,6 +13929,30 @@ ul.children {
     display: none;
   }
 }
+.achieve-area.style-2 .inner-wrapper .content.style-3 {
+  padding-right: 0;
+  padding-left: 150px;
+  border-right: transparent;
+  border-left: 1px solid rgba(255, 255, 255, 0.15);
+}
+.achieve-area.style-2 .inner-wrapper .divider {
+  width: 1px;
+  height: 136px;
+  background-color: rgba(255, 255, 255, 0.15);
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+@media (max-width: 991px) {
+  .achieve-area.style-2 .inner-wrapper .divider {
+    width: 100%;
+    height: 1px;
+  }
+}
+.achieve-area.style-2 .inner-wrapper .achieve-item-wrapper {
+  padding-left: 0;
+  padding-right: 75px;
+}
 .achieve-area .elementor-column .star {
   width: auto !important;
   transform: translate(109%, -33%);
