--- a/sass/modules/_achieve-area.scss
+++ b/sass/modules/_achieve-area.scss
@@ -55,18 +55,7 @@
                     }
                 }
             }
-            // .divider{
-            //     width: 1px;
-            //     height: 136px;
-            //     background-color: rgba(255, 255, 255, 0.15);
-            //     position: absolute;
-            //     right: 0;
-            //     top: 0;
-            //     @include rmaxwd(991){
-            //         width: 100%;
-            //         height: 1px;
-            //     }
-            // }
+         
         }
         
         .achieve-item-wrapper{
@@ -123,6 +112,28 @@
                         }
                     }
                 }
+                &.style-3{
+                    padding-right: 0;
+                    padding-left: 150px;
+                    border-right: transparent;
+                    border-left: 1px solid rgba(255, 255, 255, 0.15);
+                }
+            }
+            .divider{
+                width: 1px;
+                height: 136px;
+                background-color: rgba(255, 255, 255, 0.15);
+                position: absolute;
+                right: 0;
+                top: 0;
+                @include rmaxwd(991){
+                    width: 100%;
+                    height: 1px;
+                }
+            }
+            .achieve-item-wrapper{
+                padding-left: 0;
+                padding-right: 75px;
             }
         }
     }
